--- a/wallet/templates/wallet/cards_list.html
+++ b/wallet/templates/wallet/cards_list.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <table>
-        <th>
-            <td>Card #</td>
-            <td>Card Name</td>
-            <td>Card Type</td>
-            <td>Date Issued</td>
-            <td>Expiry Date</td>
-            <td>Issure</td>
-        </th>
+    <table class="table table-dark table-striped-columns">
+            <th scope="col">Card #</th>
+            <th scope="col">Card Name</th>
+            <th scope="col">Card Type</th>
+            <th scope="col">Date Issued</th>
+            <th scope="col">Expiry Date</th>
+            <th scope="col">Issure</th>
         {% for card in cards%}
         <tr>
             <td>{{card.card_number}}</td>
@@ -27,5 +26,8 @@
         </tr>
         {% endfor %}
     </table>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
