--- a/wallet/templates/wallet/customers_list.html
+++ b/wallet/templates/wallet/customers_list.html
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <table>
-        <th>
-            <td>First name</td>
-            <td>Email</td>
-            <td>Age</td>
-        </th>
+    <table class="table table-dark table-striped-columns">
+
+        <th scope="col">First Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Age</th>
+        <td> view profile</td>
         {% for customer in customers%}
         <tr>
-            <td>{{customer.name}}</td>
+            <td>{{customer.first_name}}</td>
             <td>{{customer.email}}</td>
             <td>{{customer.age}}</td>
+            <td><a href="{%url 'customer_profile' id=customer.id%}">profile</a></td>
         </tr>
         {% endfor %}
     </table>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
